--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -424,7 +424,7 @@ b_aydhab;阿伊迪哈卜;;;;;;;;;;x
 b_halayeb;哈拉伊卜;;;;;;;;;;x
 b_elba;艾尔巴;;;;;;;;;;x
 b_shalateen;沙腊腾;;;;;;;;;;x
-b_zabargad;撒巴嘎的;;;;;;;;;;x
+b_zabargad;扎巴贾德;;;;;;;;;;x
 b_tisiamti;提斯阿姆提;;;;;;;;;;x
 b_taiwi;泰威;;;;;;;;;;x
 b_trinkitat;特林基塔特;;;;;;;;;;x
@@ -518,8 +518,8 @@ d_kerman;克尔曼;;;;;;;;;;x
 d_kerman_adj;克尔曼;;;;;;;;;;x
 k_gandhara;犍陀罗;;;;;;;;;;x
 k_gandhara_adj;犍陀罗;;;;;;;;;;x
-d_kabul;喀布尔斯坦;;;;;;;;;;x
-d_kabul_adj;喀布尔斯坦;;;;;;;;;;x
+d_kabul;喀布里斯坦;;;;;;;;;;x
+d_kabul_adj;喀布尔;;;;;;;;;;x
 c_ghazna_adj;伽色尼;;;;;;;;;;x
 c_kabul_adj;喀布尔;;;;;;;;;;x
 c_kunduz_adj;昆都士;;;;;;;;;;x
