--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -742,7 +742,7 @@ EVTNAME88000;刺客的诞生;;;;;;;;;;x
 EVTOPTA88000;这些抽大麻的瘾君子人畜无害...;;;;;;;;;;x
 EVTDESC88001;哈萨辛, 这个神鬼莫测的刺客组织, 将他们的势力范围扩展到了叙利亚. 他们在山寨迈斯拉夫堡建立了一个分支, 并以此为据点控制周围地区. 刺客们在整个圣地猎杀那些他们视为阻碍自己的密谋的人;;;;;;;;;;x
 EVTNAME88001;阿萨辛扩展到了叙利亚;;;;;;;;;;x
-EVTOPTA88001;或许该严肃对待哈萨辛了...;;;;;;;;;;x
+EVTOPTA88001;或许该严肃对待哈萨辛派了...;;;;;;;;;;x
 EVTDESC88002;随着最后一个据点的陷落, 哈萨辛 - 臭名昭著的刺客组织 - 已在风中消散. 少数残党已隐姓埋名, 苟延残喘, 幻想着某天还能东山再起;;;;;;;;;;x
 EVTNAME88002;阿萨辛消散了!;;;;;;;;;;x
 EVTOPTA88002;他们的灭亡早已注定.;;;;;;;;;;x
@@ -769,7 +769,7 @@ EVTOPTA88016;哦天哪.;;;;;;;;;;x
 EVTDESC88017;卫士带进来一个遗留在宫外的盖住的篮子. 你以为这是某个下属送来的甜点, 兴冲冲地打开了盖子, 却发现了[From.GetTitledName]那满脸狰狞, 被戳了几个窟窿的人头。前额上, 刻了一个哈萨辛的标记.;;;;;;;;;;x
 EVTOPTA88017;我没了胃口...;;;;;;;;;;x
 EVTDESC88018;当你和[From.GetTitledFirstName]在宫内花园里游玩时, 你看到一道阳光闪过, 一把飞刀闪耀着埋入了你朋友的咽喉. 你的卫兵迅速地将你带离至安全之地, 但你还是瞥见了宫墙上穿梭着的一个穿着斗篷的刺客...;;;;;;;;;;x
-EVTOPTA88018;哈萨辛! 他们的目标是我吗?;;;;;;;;;;x
+EVTOPTA88018;哈萨辛派! 他们的目标是我吗?;;;;;;;;;;x
 EVTDESC88019;带着一身冷汗你突然醒来, 一个强烈的感觉告诉你有些事不对劲. 帐篷里摇曳的烛光下, 可见一盘热饼干和一把插在床边的匕首. 匕首抹了毒, 上面还插着一张纸条: "有一千种方法可以杀掉一个[Root.GetManWoman], [Root.GetFirstName]. 而哈萨辛每个都知道.";;;;;;;;;;x
 EVTOPTA88019;卫兵! 给我搜!;;;;;;;;;;x
 EVTDESC7700;[Root.PlotTarget.GetTitledName]近期计划访问[Root.PlotTarget.Location.GetName], 坐敞篷马车接受民众的欢呼和赞誉. 肯定会有大量的亲兵护卫, 但是如果在[Root.PlotTarget.GetTitle]必经之路的关键屋顶上埋伏几名弓手会发生什么呢...;;;;;;;;;;x
