--- a/localisation/v1_06a.csv
+++ b/localisation/v1_06a.csv
@@ -138,5 +138,5 @@ EVTOPTB86860;很遗憾，我无能为力.祝你好运.;;;;;;;;;;x
 EVTDESC86865;你在回家路上途径的沙漠中被土匪袭击了虽然你们杀了几个,但是他们任然人数众多.他们包围了你们，挂着扭曲的笑容举着粗陋的武器冲了过来.事情看起来不太妙....;;;;;;;;;;x
 EVTOPTA86865;来吧.我会让你们付出代价的....;;;;;;;;;;x
 EVTTOOLTIP86866;你做出了你最后的决定..;;;;;;;;;;x
-EVTDESC86866;你听到了一些奇怪的声音之后不久空气中充满了剑以及飞箭. 穿着长袍的人从沙漠地下窜了出来，空中尘土飞扬. 当一切平息之后, 土匪都倒在了地上，他们死了. 其中一个拿起你之前给我的奇怪的戒指, 微笑着说: "哈萨辛对欠下的人情一定会报答.朋友.";;;;;;;;;;x
+EVTDESC86866;你听到了一些奇怪的声音之后不久空气中充满了剑以及飞箭. 穿着长袍的人从沙漠地下窜了出来，空中尘土飞扬. 当一切平息之后, 土匪都倒在了地上，他们死了. 其中一个拿起你之前给我的奇怪的戒指, 微笑着说: "哈萨辛有债必偿.朋友.";;;;;;;;;;x
 EVTOPTA86866;已经两清了.;;;;;;;;;;x
