--- a/localisation/v2_10.csv
+++ b/localisation/v2_10.csv
@@ -118,7 +118,7 @@ EVTDESC91357;我的 [GetFromRelation] [From.GetBestName] 终于明白 [From.GetS
 EVTDESC91360;我的 [GetFromRelation] [From.GetTitledFirstName] 劝说我摒弃犯禁, 远离罪行. [From.GetSubjectPronounCap] 就像一个穆夫提一样引用古兰经和圣训的经文, 警告我来世会因宣淫犯禁而堕入地狱的永火中...;;;;;;;;;;x
 EVTOPTA91360;我看起来是个善男信女吗?;;;;;;;;;;x
 EVTOPTB91360;我要加入拜克塔什教团苦修!;;;;;;;;;;x
-EVTOPTC91360;我要加入哈萨辛组织赎罪!;;;;;;;;;;x
+EVTOPTC91360;我要加入哈萨辛派赎罪!;;;;;;;;;;x
 EVTOPTD91360;我要去麦加朝圣!;;;;;;;;;;x
 EVTOPTE91360;我要去作天课!;;;;;;;;;;x
 EVTDESC91361;我殷切的教诲终于感化我的 [GetFromRelation] [From.GetTitledFirstName]. [From.GetSubjectPronounCap] 决定要加入教团, 以便待奉安拉!;;;;;;;;;;x
@@ -600,7 +600,7 @@ EVTDESC_RoI_1145;当你醒来，你的心充满了关于美妙夜晚的愉悦回
 EVTTITLE_RoI_1051;魔术师;;;;;;;;;;x
 EVTDESC_RoI_1151;盛宴的宾客们窃窃私语起来，一个法师进来招待你。伴随着舞蹈，他解释说，即将到来的表演将震惊即使是最怀疑的观众。接着他把一个小男孩变成一个篮子放在地上，然后他用剑将筐砍成小块。当他清理了了篮下的碎片，没有孩子，没有血，什么都没有···;;;;;;;;;;x
 EVTOPTA_RoI_1151;惊人！;;;;;;;;;;x
-EVTOPTB_RoI_1151;守卫 - 逮捕那个男人！;;;;;;;;;;x
+EVTOPTB_RoI_1151;卫兵 - 逮捕那个家伙！;;;;;;;;;;x
 EVTDESC_RoI_1152;盛宴的宾客们窃窃私语起来，一个法师进来招待你。伴随着舞蹈，他在在你面前的桌子上放置三个杯子。他把一个球放到其中一个杯子内，然后告诉你要密切观察，并告诉你球在哪个杯子里。随后，他以迅雷不及掩耳之势四处移动的杯子，同时和你胡扯告诉你要注意。然后，他会要求你选择一个杯子。;;;;;;;;;;x
 EVTOPTA_RoI_1152;左。;;;;;;;;;;x
 EVTOPTB_RoI_1152;中间。;;;;;;;;;;x
@@ -726,7 +726,7 @@ realm_jains_insulted;你王国里的耆那教被冒犯了;;;;;;;;;;x
 EVTDESC_RoI_203;一个印度的瑜伽士到达了你的宫廷，寻找听众.他说了很多关于印度教的神祗和如何通过摩诃婆罗多获得智慧和力量.;;;;;;;;;;x
 EVTOPTA_RoI_203;把你知道的都告诉我...;;;;;;;;;;x
 EVTOPTB_RoI_203;如果你说完了,你可以走了.;;;;;;;;;;x
-EVTOPTC_RoI_203;我不需要你可悲的邪恶神明. 卫兵,把他赶走!;;;;;;;;;;x
+EVTOPTC_RoI_203;我对你可悲怪异的邪神不感兴趣。卫兵，把他赶走！;;;;;;;;;;x
 EVTDESC_RoI_204;瑜伽士继续谈到了禁欲主义和瑜伽以及如何通过自律和调节追求精神上的满足.;;;;;;;;;;x
 EVTOPTA_RoI_204;你说服了我. 我也要信奉瑜伽和禁欲主义!;;;;;;;;;;x
 EVTOPTB_RoI_204;你很睿智. 我会转信印度教.;;;;;;;;;;x
@@ -738,7 +738,7 @@ EVTOPTB_RoI_207;你很睿智. 我会转信佛教.;;;;;;;;;;x
 EVTOPTC_RoI_207;又想了想,也许这并不适合我.;;;;;;;;;;x
 EVTDESC_RoI_209;一个裸体的耆那教苦行者到达了你的宫廷,寻找听众. 在你的王座前坐下,他怒斥了你的生活方式,说你罪孽深重,并且告诉你如何通过耆那教的教义获得协调与纯洁.;;;;;;;;;;x
 EVTOPTB_RoI_209;先穿上衣服!;;;;;;;;;;x
-EVTOPTC_RoI_209;说我罪孽深重?作死? 卫兵, 把他拉出去砍了!;;;;;;;;;;x
+EVTOPTC_RoI_209;说我罪孽深重？你敢！ 卫兵，把他拉出去砍了！;;;;;;;;;;x
 EVTDESC_RoI_210;那个裸体的耆那教苦行者继续谈到了禁欲主义和瑜伽以及如何通过自律和调节追求灵魂上的纯洁.;;;;;;;;;;x
 EVTOPTA_RoI_210;你说服了我,我也要开始裸体行走!;;;;;;;;;;x
 EVTOPTB_RoI_210;你很睿智. 我会转信耆那教.;;;;;;;;;;x
