--- a/localisation/v2_20.csv
+++ b/localisation/v2_20.csv
@@ -85,7 +85,7 @@ EVTNAME107205;教学战役;;;;;;;;;;x
 EVTDESC107205;当通过海峡或河流进攻是,你的部队承受一些惩罚. 点击一个省份并移动鼠标至河流图标(如果有)上查看哪些省份与河流或海峡相接. 注意,如果你要查看的省份正在被围,你需要从攻城界面切换到省份界面. 去击败那些乌合之众吧!;;;;;;;;;;x
 EVTOPTA107205;了解！;;;;;;;;;;x
 EVTNAME107250;教学战役;;;;;;;;;;x
-EVTDESC107250;你完美的解决了那些叛军！现在和平降临，最好解散你的军队。直辖征召需要花费金钱维持，而封臣的军队如果征召太久，贵族们也会不高兴。用征召部队同样的方式,在军事窗口解散他们。;;;;;;;;;;x
+EVTDESC107250;你完美的解决了那些叛军！现在和平降临，你最好解散军队。直辖征召需要花费金钱维持，而封臣的军队如果征召太久，他们也会不高兴。用征召部队同样的方式，在军事窗口解散他们。;;;;;;;;;;x
 EVTOPTA107250;了解！;;;;;;;;;;x
 EVTNAME107251;教学战役;;;;;;;;;;x
 EVTDESC107251;现在是扩张你国土的时机. 军事扩张最容易的目标就是周围一圈效果. 但如果你熟悉如何运用舰队, 就让我们选加纳利亚, 一个在西非近海的一省小国.;;;;;;;;;;x
