--- a/localisation/v2_20b.csv
+++ b/localisation/v2_20b.csv
@@ -2,7 +2,7 @@
 EVTOPTC91355;也许我可以求于 [From.GetHerHis] 贪婪的一面...;;;;;;;;;;x
 EVTOPTD91355;[Root.Religion.GetRandomGodName] 也许会欣喜与我捐献的小钱钱.;;;;;;;;;;x
 EVTOPTE91355;也许我可以让 [From.GetHerHis] [From.Spouse.GetHusbandWife] 到我的阵营来.;;;;;;;;;;x
-EVTDESC91372;我的手下给我带来了一条[From.GetTitledFirstName]的消息，他仍不愿放弃[From.GetSheHe]糜烂的生活方式！[From.GetSheHeCap]提出如果我允许[From.GetHerHim]继续[From.GetHerHis]糜烂生活，[From.GetSheHe]将提供给我一个具有强大战斗力的受阉者。;;;;;;;;;;x
+EVTDESC91372;我的手下给我带来了一条[From.GetTitledFirstName]的消息，他仍不愿放弃[From.GetSheHe]糜烂的生活方式！[From.GetSheHeCap]提出如果我允许[From.GetHerHim]继续[From.GetHerHis]糜烂生活，[From.GetSheHe]将提供给我一个具有强大战斗力的宦官。;;;;;;;;;;x
 EVTOPTA91372;这样的阉人肯定有用!;;;;;;;;;;x
 EVTDESC91373;[From.GetTitledFirstName] 跟我说 [From.GetSheHe] 选择了要过 [From.GetHerHis] 想要的生活. [From.GetSubjectPronounCap] 试着给我解释我眼中的腐化不过是一种敬仰[From.Religion.GetRandomGodName]的方式. [From.GetSheHeCap] 也提出以我之名捐笔钱给教会以示友好.;;;;;;;;;;x
 EVTOPTA91373;[From.Religion.GetRandomGodName]会认可这捐献的.;;;;;;;;;;x
