--- a/localisation/v2_21.csv
+++ b/localisation/v2_21.csv
@@ -16,7 +16,7 @@ opinion_heretic_tribal_liege;异端;;;;;;;;;;x
 opinion_related_religion_tribal_liege;宗教差异;;;;;;;;;;x
 AIREASON_TRIBAL_VASSAL_PRESTIGE_HIT;将会消耗我过多的威望;;;;;;;;;;x
 opinion_granted_other_vice_royalty;封建领主对任命总督一事的看法;;;;;;;;;;x
-GRANT_VICE_ROYALTY_INTERACTION_8;任命总督会降低你所有封建公爵或以上封臣对你的看法：§R$OPINION$§!。;;;;;;;;;;x
+GRANT_VICE_ROYALTY_INTERACTION_8;任命总督会降低你所有封建公爵或以上封臣对你的好感：§R$OPINION$§!。;;;;;;;;;;x
 NOT_ANY_PREVIOUS_HOLDER_STARTS;并无前任;;;;;;;;;;x
 tribal_build_zeal_ARMY_OF;$RELIGION$ 狂热者 $CHARACTER$;;;;;;;;;;x
 tribal_organize_raid_ARMY_OF;入侵者 $CHARACTER$;;;;;;;;;;x
