--- a/localisation/z_magne.csv
+++ b/localisation/z_magne.csv
@@ -1,3 +1,3 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-bear.6.undo;瞧你那熊样！;;;;;;;;;;x
+bear.6.undo;是可忍孰不可忍！;;;;;;;;;;x
 UNDO_BEAR_TRANSFORMATION;醒来后，一切都恢复了正常。也许所有这些只不过是一场梦..……;;;;;;;;;;x
